// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GorgiasChatCreationWizardStepBasics /> submits form when updating chat 1`] = `
[
  [
    Immutable.Map {
      "type": "gorgias_chat",
      "name": "Test Chat Title",
      "id": 1,
      "meta": Immutable.Map {
        "shop_integration_id": null,
        "preferences": Immutable.Map {
          "live_chat_availability": "always-live-during-business-hours",
        },
        "language": "en-US",
        "wizard": Immutable.Map {
          "step": "branding",
        },
        "shop_name": null,
        "shop_type": null,
      },
    },
    undefined,
    true,
    [Function],
  ],
]
`;

exports[`<GorgiasChatCreationWizardStepBasics /> submits form with default values when creating chat 1`] = `
[
  [
    Immutable.Map {
      "type": "gorgias_chat",
      "name": "Test Chat Title",
      "decoration": Immutable.Map {
        "conversation_color": "#0d87dd",
        "main_color": "#0d87dd",
        "introduction_text": "How can we help?",
        "offline_introduction_text": "We'll be back tomorrow",
        "avatar_type": "team-members",
        "position": Immutable.Map {
          "alignment": "bottom-right",
          "offsetX": 0,
          "offsetY": 0,
        },
        "avatar": Immutable.Map {
          "image_type": "agent-picture",
          "name_type": "agent-first-name",
        },
      },
      "meta": Immutable.Map {
        "language": "en-US",
        "preferences": Immutable.Map {
          "live_chat_availability": "always-live-during-business-hours",
          "email_capture_enforcement": "optional",
          "auto_responder": Immutable.Map {
            "enabled": true,
            "reply": "reply-dynamic",
          },
          "offline_mode_enabled_datetime": null,
        },
        "wizard": Immutable.Map {
          "status": "draft",
          "step": "branding",
        },
        "shop_name": null,
        "shop_type": null,
        "shop_integration_id": null,
      },
    },
    undefined,
    true,
    [Function],
  ],
]
`;
